examples/test/testpolicy17158.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17158
  namespace: namespace313
spec:
  podSelector:
    matchLabels:
      key21: value47
      key14: value6
      key26: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value27
          key2: value46
      podSelector:
        matchLabels:
          key31: value48
          key43: value8
          key34: value34
